Update to use Java 17
* change to gradle 8.0.2
* minor changes to support java 17
* remove test module configuration and use gradle test platform instead